--- a/public/index.html
+++ b/public/index.html
@@ -4,16 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your D&D Companion</title>
+    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <header>
-        <div class="header-item" id="logo"><img src="#" alt="logo"></div>
-        <div class="header-item" id="user_btn"><img src="#" alt="account"></div>
+        <a href="#" class="header-item" id="logo">
+            <img src="#" alt="logo">
+        </a>
+        <a href="#" class="header-item" id="user_btn">
+            <img src="#" alt="account">
+        </a>
     </header>
     <main>
-        <div>
-            <div>Dungeon Master</div>
-            <div>Adventurer</div>
+        <div class="which_flex">
+            <a href="#" class="which_btn" id="dm_btn">Dungeon Master</a>
+            <a href="#" class="which_btn" id="adv_btn">Adventurer</a>
         </div>
     </main>
 </body>
