--- a/public/index.html
+++ b/public/index.html
@@ -9,18 +9,27 @@
 </head>
 <body>
     <header>
-        <a href="#" class="header-item" id="logo">
-            <img src="#" alt="logo">
+        <a href="index.html" class="header-item" id="logo">
+            <img src="Logo.png" alt="logo">
         </a>
-        <a href="#" class="header-item" id="user_btn">
-            <img src="#" alt="account">
+        <a href="character.html" class="header-item" id="user_btn">
+            <img src="account-icon.png" alt="account">
         </a>
     </header>
+
     <main>
+        <h2 class="role-heading">Choose Your Path</h2>
         <div class="which_flex">
-            <a href="#" class="which_btn" id="dm_btn">Dungeon Master</a>
-            <a href="#" class="which_btn" id="adv_btn">Adventurer</a>
+            <a href="dungeon_master.html" class="role_btn">
+                <img src="Untitled144_20250320111009.png" alt="Dungeon Master">
+                <span class="role_name">Dungeon Master</span>
+            </a>
+            <a href="character.html" class="role_btn">
+                <img src="adventurer-image.jpg" alt="Adventurer">
+                <span class="role_name">Adventurer</span>
+            </a>
         </div>
     </main>
+    <script src="index.js"></script>
 </body>
 </html>
