--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <a href="index.html" class="header-item" id="logo">
-            <img src="Logo.png" alt="logo">
+            <img src="images/Logo.png" alt="logo">
         </a>
         <a href="character.html" class="header-item" id="user_btn">
             <img src="account-icon.png" alt="account">
@@ -21,7 +21,7 @@
         <h2 class="role-heading">Choose Your Path</h2>
         <div class="which_flex">
             <a href="dungeon_master.html" class="role_btn">
-                <img src="Untitled144_20250320111009.png" alt="Dungeon Master">
+                <img src="images/dm.png" alt="Dungeon Master">
                 <span class="role_name">Dungeon Master</span>
             </a>
             <a href="character.html" class="role_btn">
