--- a/public/character/species.html
+++ b/public/character/species.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <div class="header-container">
+        <div class="header_container">
             <a href="index.html" id="logo">
                 <img src="../Images/Logo.png" alt="D&D Logo">
             </a>
@@ -17,35 +17,37 @@
     </header>
     <main>
         <div class="container">
-            <div class="left_panel">
+            <div class="left-panel">
                 <div class="char_button">
-                    <a href="#">Species</a>
+                    <a href="species.html" id="selected">Species</a>
                 </div>
                 <div class="char_button">
-                    <a href="#">Body</a>
+                    <a href="body.html">Body</a>
                 </div>
                 <div class="char_button">
-                    <a href="#">Clothes</a>
+                    <a href="clothes.html">Clothes</a>
                 </div>
                 <div class="char_button">
-                    <a href="#">Accessories</a>
+                    <a href="accessories.html">Accessories</a>
                 </div>
                 <div class="char_button">
-                    <a href="#">Stats</a>
+                    <a href="stats.html">Stats</a>
                 </div>
                 <div class="char_button">
-                    <a href="#">Save</a>
+                    <a href="#" id="save">Save</a>
                 </div>
+            </div>
 
             <div class="center-panel">
 
             </div>
 
             <div class="right-panel">
-                <img src="#" alt="Image 1">
-                <img src="#" alt="Image 2">
-                <img src="#" alt="Image 3">
-                <img src="#" alt="Image 4">
+                <h1>Choose a species</h1>
+                <img src="../enemies/imp.png" alt="Image 1">
+                <img src="../enemies/mimic.png" alt="Image 2">
+                <img src="../enemies/rat.png" alt="Image 3">
+                <img src="../enemies/skeleton.png" alt="Image 4">
             </div>
         </div>
     </main>
