--- a/public/character/body.html
+++ b/public/character/body.html
@@ -44,7 +44,48 @@
 
             <div class="right-panel">
                 <h1>Body customisation</h1>
-                <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
+
+                <div dimension_container>
+                    <div class="car_height">
+                        <h2>Height</h2>
+                        <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
+                    </div>
+
+                    <div class="car_width">
+                        <h2>Width</h2>
+                        <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
+                    </div>
+                </div>
+            
+                <div class="car_color">
+                    <h2>Skin color</h2>
+                    <div class="color_container">
+                        <img src="../enemies/imp.png" alt="Image 1">
+                        <img src="../enemies/mimic.png" alt="Image 2">
+                        <img src="../enemies/rat.png" alt="Image 3">
+                        <img src="../enemies/skeleton.png" alt="Image 4">
+                    </div>
+                </div>
+            
+                <div class="car_eye-color">
+                    <h2>Eye color</h2>
+                    <div class="eye-color_container">
+                        <img src="../enemies/imp.png" alt="Image 1">
+                        <img src="../enemies/mimic.png" alt="Image 2">
+                        <img src="../enemies/rat.png" alt="Image 3">
+                        <img src="../enemies/skeleton.png" alt="Image 4">
+                    </div>
+                </div>
+
+                <div class="car_hair">
+                    <h2>Hair</h2>
+                    <div class="eye-color_container">
+                        <img src="../enemies/imp.png" alt="Image 1">
+                        <img src="../enemies/mimic.png" alt="Image 2">
+                        <img src="../enemies/rat.png" alt="Image 3">
+                        <img src="../enemies/skeleton.png" alt="Image 4">
+                    </div>
+                </div>
             </div>
         </div>
     </main>
