--- a/public/character/stats.html
+++ b/public/character/stats.html
@@ -43,10 +43,14 @@
             </div>
 
             <div class="right-panel">
-                <img src="../enemies/imp.png" alt="Image 1">
-                <img src="../enemies/mimic.png" alt="Image 2">
-                <img src="../enemies/rat.png" alt="Image 3">
-                <img src="../enemies/skeleton.png" alt="Image 4">
+                <h1>Character stats</h1>
+                <div class="char_name">
+                    <h2>Character name</h2>
+                    <input type="text" id="char_name" name="char_name">
+                </div>
+                <div>
+                    
+                </div>
             </div>
         </div>
     </main>
