--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="header-container">
-            <a href="character.html" id="user_btn">
+            <a href="account/login.html" id="user_btn">
                 <img src="account-icon.png" alt="Account">
             </a>
             <a href="index.html" id="logo">
@@ -26,7 +26,7 @@
                 <img src="Images/DM.jpg" alt="Dungeon Master">
                 <span class="role_name">Dungeon Master</span>
             </a>
-            <a href="character.html" class="role_btn">
+            <a href="character/clothes.html" class="role_btn">
                 <img src="Images/Adventurer.png" alt="Adventurer">
                 <span class="role_name">Adventurer</span>
             </a>
