--- a/public/character/body.html
+++ b/public/character/body.html
@@ -60,30 +60,30 @@
                 <div class="car_color">
                     <h2>Skin color</h2>
                     <div class="color_container">
-                        <img src="../enemies/imp.png" alt="Image 1">
-                        <img src="../enemies/mimic.png" alt="Image 2">
-                        <img src="../enemies/rat.png" alt="Image 3">
-                        <img src="../enemies/skeleton.png" alt="Image 4">
+                        <img src="../enemies/imp.png" alt="Image 1" class="car_img">
+                        <img src="../enemies/mimic.png" alt="Image 2" class="car_img">
+                        <img src="../enemies/rat.png" alt="Image 3" class="car_img">
+                        <img src="../enemies/skeleton.png" alt="Image 4" class="car_img">
                     </div>
                 </div>
             
                 <div class="car_eye-color">
                     <h2>Eye color</h2>
                     <div class="eye-color_container">
-                        <img src="../enemies/imp.png" alt="Image 1">
-                        <img src="../enemies/mimic.png" alt="Image 2">
-                        <img src="../enemies/rat.png" alt="Image 3">
-                        <img src="../enemies/skeleton.png" alt="Image 4">
+                        <img src="../enemies/imp.png" alt="Image 1" class="car_img">
+                        <img src="../enemies/mimic.png" alt="Image 2" class="car_img">
+                        <img src="../enemies/rat.png" alt="Image 3" class="car_img">
+                        <img src="../enemies/skeleton.png" alt="Image 4" class="car_img">
                     </div>
                 </div>
 
                 <div class="car_hair">
                     <h2>Hair</h2>
                     <div class="eye-color_container">
-                        <img src="../enemies/imp.png" alt="Image 1">
-                        <img src="../enemies/mimic.png" alt="Image 2">
-                        <img src="../enemies/rat.png" alt="Image 3">
-                        <img src="../enemies/skeleton.png" alt="Image 4">
+                        <img src="../enemies/imp.png" alt="Image 1" class="car_img">
+                        <img src="../enemies/mimic.png" alt="Image 2" class="car_img">
+                        <img src="../enemies/rat.png" alt="Image 3" class="car_img">
+                        <img src="../enemies/skeleton.png" alt="Image 4" class="car_img">
                     </div>
                 </div>
             </div>
