--- a/public/character/species.html
+++ b/public/character/species.html
@@ -44,10 +44,10 @@
 
             <div class="right-panel">
                 <h1>Choose a species</h1>
-                <img src="../enemies/imp.png" alt="Image 1">
-                <img src="../enemies/mimic.png" alt="Image 2">
-                <img src="../enemies/rat.png" alt="Image 3">
-                <img src="../enemies/skeleton.png" alt="Image 4">
+                    <div class="img_box">
+                        <h3>Human</h3>
+                        <img src="../customisation/species/Human Shape.png" alt="Image 1">
+                    </div>
             </div>
         </div>
     </main>
