--- a/public/character/accessories.html
+++ b/public/character/accessories.html
@@ -43,10 +43,10 @@
             </div>
 
             <div class="right-panel">
-                <img src="../enemies/imp.png" alt="Image 1">
-                <img src="../enemies/mimic.png" alt="Image 2">
-                <img src="../enemies/rat.png" alt="Image 3">
-                <img src="../enemies/skeleton.png" alt="Image 4">
+                <div class="img_box">
+                    <h3>Accessory</h3>
+                    <img src="../customisation/clothing/Human Clothing Pants.png" alt="">
+                </div>
             </div>
         </div>
     </main>
