--- a/public/character/body.html
+++ b/public/character/body.html
@@ -39,7 +39,7 @@
             </div>
 
             <div class="center-panel">
-
+                <div id="characterDisplay"></div>
             </div>
 
             <div class="right-panel">
@@ -60,26 +60,26 @@
                 <div class="car_color">
                     <h2>Skin color</h2>
                     <div class="color_container">
-                        <img src="../enemies/imp.png" alt="Image 1" class="car_img">
-                        <img src="../enemies/mimic.png" alt="Image 2" class="car_img">
-                        <img src="../enemies/rat.png" alt="Image 3" class="car_img">
-                        <img src="../enemies/skeleton.png" alt="Image 4" class="car_img">
+                        <img src="../customisation/colors/Light-Orange.png" alt="Image 1" class="car_img">
+                        <img src="../customisation/colors/Green.png" alt="Image 2" class="car_img">
+                        <img src="../customisation/colors/Light-Blue.png" alt="Image 3" class="car_img">
+                        <img src="../customisation/colors/Orange.png" alt="Image 4" class="car_img">
                     </div>
                 </div>
             
                 <div class="car_eye-color">
                     <h2>Eye color</h2>
                     <div class="eye-color_container">
-                        <img src="../enemies/imp.png" alt="Image 1" class="car_img">
-                        <img src="../enemies/mimic.png" alt="Image 2" class="car_img">
-                        <img src="../enemies/rat.png" alt="Image 3" class="car_img">
-                        <img src="../enemies/skeleton.png" alt="Image 4" class="car_img">
+                        <img src="../customisation/colors/Blue.png" alt="Image 1" class="car_img">
+                        <img src="../customisation/colors/Green.png" alt="Image 2" class="car_img">
+                        <img src="../customisation/colors/Cyan.png" alt="Image 3" class="car_img">
+                        <img src="../customisation/colors/Orange.png" alt="Image 4" class="car_img">
                     </div>
                 </div>
 
                 <div class="car_hair">
                     <h2>Hair</h2>
-                    <div class="eye-color_container">
+                    <div class="hair-color_container">
                         <img src="../enemies/imp.png" alt="Image 1" class="car_img">
                         <img src="../enemies/mimic.png" alt="Image 2" class="car_img">
                         <img src="../enemies/rat.png" alt="Image 3" class="car_img">
@@ -89,5 +89,6 @@
             </div>
         </div>
     </main>
+    <script src="character.js"></script>
 </body>
 </html>
