--- a/public/character/clothes.html
+++ b/public/character/clothes.html
@@ -39,10 +39,11 @@
             </div>
 
             <div class="center-panel">
-
+                <div id="characterDisplay"></div>
             </div>
 
             <div class="right-panel">
+                <h1>Choose your clothing</h1>
                 <div class="img_box">
                     <h3>Pants</h3>
                     <img src="../customisation/clothing/Human Clothing Pants.png" alt="Pants">
@@ -50,5 +51,6 @@
             </div>
         </div>
     </main>
+    <script src="character.js"></script>
 </body>
 </html>
