--- a/public/character/species.html
+++ b/public/character/species.html
@@ -39,7 +39,7 @@
             </div>
 
             <div class="center-panel">
-
+                <div id="characterDisplay"></div>
             </div>
 
             <div class="right-panel">
@@ -50,6 +50,8 @@
                     </div>
             </div>
         </div>
+
+        <script src="character.js"></script>
     </main>
 </body>
 </html>
