--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your D&D Companion</title>
-    <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <header>
         <div class="header-container">
             <a href="account/login.html" id="user_btn">
-                <img src="account-icon.png" alt="Account">
+                <img src="images/" alt="Account">
             </a>
             <a href="index.html" id="logo">
                 <img src="Images/Logo.png" alt="D&D Logo">
@@ -22,7 +22,7 @@
     <main>
         <h2 class="role-heading">Choose Your Path</h2>
         <div class="which_flex">
-            <a href="battlemap.html" class="role_btn">
+            <a href="dm/battlemap.html" class="role_btn">
                 <img src="Images/DM.jpg" alt="Dungeon Master">
                 <span class="role_name">Dungeon Master</span>
             </a>
