--- a/public/dm/battlemap.html
+++ b/public/dm/battlemap.html
@@ -3,22 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Battlemap</title>
-    <link rel="stylesheet" href="../header.css">
+    <title>Dungeon Master Panel</title>
+    <link rel="stylesheet" href="dm.css">
 </head>
 <body>
+
+    <!-- Header with Centered Logo -->
     <header>
-        <a href="index.html" class="header-item" id="logo">
-            <img src="../images/Logo.png" alt="logo">
+        <a href="index.html" id="logo">
+            <img src="../Images/Logo.png" alt="D&D Logo">
         </a>
-        <a href="login.html" class="header-item" id="user_btn">
-            <img src="account-icon.png" alt="account">
-        </a>
+
+        <!-- Players Dropdown Button -->
+        <div class="player-menu">
+            <button class="player-btn" onclick="togglePlayerDropdown()">
+                <img src="../Images/player-icon.png" alt="Players">
+            </button>
+            <div class="dropdown-content" id="playerList">
+                <p>No players joined yet.</p>
+            </div>
+        </div>
+
+        <!-- Monsters Dropdown Button -->
+        <div class="monster-menu">
+            <button class="monster-btn" onclick="toggleMonsterDropdown()">
+                <img src="../Images/monster-icon.png" alt="Monsters">
+            </button>
+            <div class="dropdown-content" id="monsterList">
+                <p>No monsters added yet.</p>
+            </div>
+        </div>
+
+        <!-- Dragon Button -->
+        <div class="dragon-menu">
+            <button class="dragon-btn" onclick="toggleDragonPlacement()">
+                <img src="../Images/rawt.png" alt="Dragon">
+            </button>
+        </div>
+
     </header>
 
-    <main>
-        
-    </main>
-    <script src="#"></script>
+    <div class="container">
+        <div class="battlemap-container">
+            <div id="battleMap"></div>
+        </div>
+    </div>
+
+    <script src="dm.js"></script>
 </body>
 </html>
