--- a/public/character/species.html
+++ b/public/character/species.html
@@ -43,7 +43,7 @@
             </div>
 
             <div class="right-panel">
-                <h1>Choose a species</h1>
+                <h1>Choose a species</h1> <br>
                     <div class="img_box">
                         <h3>Human</h3>
                         <img src="../customisation/species/Human Shape.png" alt="Image 1">
