--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="header-container">
             <a href="account/login.html" id="user_btn">
-                <img src="images/" alt="Account">
+                <img src="images/Login-Icon.png" alt="Account">
             </a>
             <a href="index.html" id="logo">
                 <img src="Images/Logo.png" alt="D&D Logo">
