--- a/public/dm/battlemap.html
+++ b/public/dm/battlemap.html
@@ -17,7 +17,7 @@
         <!-- Players Dropdown Button -->
         <div class="player-menu">
             <button class="player-btn" onclick="togglePlayerDropdown()">
-                <img src="../Images/player-icon.png" alt="Players">
+                <img src="../Images/Login-Icon.png" alt="Players">
             </button>
             <div class="dropdown-content" id="playerList">
                 <p>No players joined yet.</p>
@@ -27,7 +27,7 @@
         <!-- Monsters Dropdown Button -->
         <div class="monster-menu">
             <button class="monster-btn" onclick="toggleMonsterDropdown()">
-                <img src="../Images/monster-icon.png" alt="Monsters">
+                <img src="../Images/Enemy-Icon.png" alt="Monsters">
             </button>
             <div class="dropdown-content" id="monsterList">
                 <p>No monsters added yet.</p>
