--- a/public/dm/battlemap.html
+++ b/public/dm/battlemap.html
@@ -49,7 +49,7 @@
         </div>
     </div>
 
-    <script src="test.js"></script>
+    <script src="dm.js"></script>
     <!-- <script src="battlemap.js"></script> -->
 </body>
 </html>
